# Beacon

./: .gitignore  README.md  pyproject.toml
beacon/: __init__.py  cli.py  config.py  core.py  utils.py
beacon/generator/: __init__.py  adr.py  ai.py  code.py
beacon/parser/: __init__.py  models.py  spec_parser.py
beacon/templates/: adr.md.jinja2  module.py.jinja2  test_module.py.jinja2
docs/internal/: roadmap.md
specs/: example.beacon
templates/: .gitkeep
tests/: __init__.py  test_ai.py  test_cli.py  test_init.py
