[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon-cli"
version = "0.1.0"
description = "A CLI tool that transforms semi-structured specifications into code, tests, and ADRs."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Beacon Authors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
beacon = "beacon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["beacon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
